...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Press 'Add' to add your first movie!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PLw-
                                <rect key="frame" x="118" y="273" width="365" height="117"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="117" id="5V0-MG-VHa"/>
                                    <constraint firstAttribute="width" constant="365" id="QcG-1D-QVb"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <fontDescription key="fontDescription" name="GujaratiSangamMN" family="Gujarati Sangam MN" pointSize="14"/>
                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gz4-pI-wGV">
                                                <rect key="frame" x="76" y="0.0" width="441" height="30"/>
                                                <accessibility key="accessibilityConfiguration" label="Title Text Field"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J6j-u2-sBT" customClass="CustomButton" customModule="My_Movies_App" customModuleProvider="target">
                                                <rect key="frame" x="524" y="0.0" width="60" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="kxt-dX-Fd1"/>
                                                </constraints>
                                                <state key="normal" title="Search"/>
                                                <connections>
                                                    <action selector="searchForMovie:" destination="ay7-W7-D2O" eventType="touchUpInside" id="Zkf-dK-7DM"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
...
                                            <constraint firstAttribute="height" constant="18" id="6ni-sj-LfT"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="GujaratiSangamMN" family="Gujarati Sangam MN" pointSize="14"/>
                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cg3-gN-b9L" userLabel="Desc Text View" customClass="CustomTextView" customModule="My_Movies_App" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="58" width="584" height="50"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Desc Text View" label="Desc Text View"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="Qxc-Nb-qPz"/>
                                        </constraints>
...
                                        <rect key="frame" x="0.0" y="490" width="584" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="150" id="mBf-5B-Qjj"/>
                                            <constraint firstAttribute="height" constant="30" id="rfU-Q4-c6b"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="GujaratiSangamMN" family="Gujarati Sangam MN" pointSize="15"/>
                                        <state key="normal" title="SAVE"/>
                                        <variation key="default">
                                            <mask key="constraints">
                                                <exclude reference="mBf-5B-Qjj"/>
                                            </mask>
                                        </variation>
                                        <connections>
...
