//
//  My_Movies_AppUITests.swift
//  My-Movies-AppUITests
//
//  Created by Adam Dostalik on 2/19/16.
//  Copyright © 2016 Adam Dostalik. All rights reserved.
//

import XCTest

class My_Movies_AppUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        
        let app = XCUIApplication()
        app.navigationBars["My_Movies_App.View"].buttons["Add"].tap()
        app.textFields["Title Text Field"].tap()
        app.textFields["Title Text Field"].typeText("Rush Hour")
        
        let deleteKey = app.keys["delete"]
        deleteKey.tap()
        deleteKey.tap()
        app.textFields["Title Text Field"]
        app.buttons["Search"].tap()
        app.textViews["Desc Text View"].tap()
        app.textViews["Desc Text View"]
        app.keys["s"].tap()
        app.textViews["Desc Text View"]
        app.toolbars.buttons["Done"].tap()
        app.buttons["SAVE"].tap()
        
        
    }
    
    func makePostTest() {
        
        

    }
}
